# advent_of_code_2025_c

./: CMakeLists.txt
src/: day_01.c  day_02.c  day_03.c  day_04.c  day_06.c  day_07.c
src/day_05/: main.c  model.c  model.h  part1.c  part2.c  parts.h  util.c  util.h
src/utils/: chargrid.c  chargrid.h  linked_list.c  linked_list.h  vectors.c  vectors.h
